--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+/*counter css*/
+.counter{
+  width: 100%;
+  max-width: 300px;
+  margin: auto;
+  border: 1px solid gray;
+}
